--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -28,12 +28,12 @@
         android:text="@string/start_button_string"/>
 
     <Button
-        android:id="@+id/stop_button"
+        android:id="@+id/pause_button"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="center_horizontal"
         android:layout_margin="5dp"
-        android:text="@string/stop_button_string"/>
+        android:text="@string/pause_button_string"/>
 
     <Button
         android:id="@+id/reset_button"
